--- a/05.Serialismo.tex
+++ b/05.Serialismo.tex
@@ -11,7 +11,7 @@
 	
 	\begin{wrapfigure}{L}{0.3\textwidth}
 		\captionsetup{justification=centering, font=footnotesize}
-		\vspace{0cm}
+		\vspace{-\bigskipamount}
 		\centering{
 			\includegraphics[width=0.22\textwidth]{Alban_Berg.jpg}			
 			\caption*{Alban Berg\\(1885--1935)}	}
@@ -27,26 +27,41 @@
 	
 	En 1946 se fundaron los Cursos de Verano de Darmstadt, fundados por Wolfgang Steinecke y patrocinados por las fuerzas americanas, con el objetivo de retomar la actividad musical en la Alemania de la posguerra. Los cursos se centraron en dar a conocer las técnicas compositivas de las generaciones anteriores. Aunque el primer año estuvo enfocado en el movimiento neoclásico, fue en los años posteriores cuando se desarrolló un mayor interés por las técnicas serialistas.
 	
-	Los cursos resultaron en la aparición de una nueva escuela de compositores cuya finalidad artística era crear un lenguaje musical distinto y alejado de la tradición para, de esta forma, obtener una mayor libertad compositiva. Esta escuela tomó el nombre de la ciudad donde se realizaban los cursos: se llamó la Escuela de Darmstadt. El término fue acuñado por el compositor Luigi Nono en una de sus clases magistrales en 1957, y con él se describía a sí mismo y a sus compañeros compositores: Pierre Boulez, Karlheinz Stockhausen y Bruno Maderna. Para estos compositores, la tradición artística estaba demasiado relacionada con los fracasos políticos y las penurias sociales pasadas, y precisamente por ello creían necesario romper con todos los vínculos heredados.
+	Los cursos resultaron en la aparición de una nueva escuela de compositores cuya finalidad artística era crear un lenguaje musical distinto y alejado de la tradición para, de esta forma, obtener una mayor libertad compositiva. Como dijo Karlheinz Stockhausen:
+	% TODO
+	\begin{quote}
+		\textit{New methods change the experience, and new experiences change man. Whenever we hear sounds, we are changed, we are no longer the same, and this is more the case when we hear organized sounds; music.}
+	\end{quote}
+	
+	Esta escuela tomó el nombre de la ciudad donde se realizaban los cursos: se llamó la Escuela de Darmstadt. El término fue acuñado por el compositor Luigi Nono en una de sus clases magistrales en 1957, y con él se describía a sí mismo y a sus compañeros compositores: Pierre Boulez, Karlheinz Stockhausen y Bruno Maderna. Para estos compositores, la tradición artística estaba demasiado relacionada con los fracasos políticos y las penurias sociales pasadas, y precisamente por ello creían necesario romper con todos los vínculos heredados.
+	
+	\pagebreak
 	
 	\begin{wrapfigure}{R}{0.3\textwidth}
 		\captionsetup{justification=centering, font=footnotesize}
-		\vspace{-0.5cm}
 		\centering{
 			\includegraphics[width=0.22\textwidth]{Anton_Webern.jpg}			
 			\caption*{Anton Webern\\(1883--1945)}	}
 	\end{wrapfigure}
-    Sin embargo, para crear aquel nuevo lenguaje no tomaron como referencia el dodecafonismo de Schoenberg, ya que él veía su sistema como parte de la tradición musical, como un elemento más en la evolución de la música. Se centraron, en cambio, en la formalidad y abstracción del serialismo de Anton Webern, y desarrollaron a partir de sus métodos el denominado \emph{serialismo integral}. Para la Escuela de Viena, el estilo compositivo de Webern era tan solo un posible enfoque del amplio abanico que abarcaba el dodecafonismo, pero la Escuela de Darmstadt lo consideró como un avance de éste.
+    Sin embargo, para crear aquel nuevo lenguaje no tomaron como referencia el dodecafonismo de Schoenberg, ya que él veía su sistema como parte de la tradición musical, como un elemento más en la evolución de la música. Se centraron, en cambio, en la formalidad y abstracción del serialismo de Anton Webern, y desarrollaron a partir de sus métodos el denominado \emph{serialismo integral}.
+    
+    Para la Escuela de Viena, el estilo compositivo de Webern era tan solo un posible enfoque del amplio abanico que abarcaba el dodecafonismo, pero la Escuela de Darmstadt lo consideró como un avance de éste.
 	
-	El serialismo integral es un sistema de composición musical que predetermina los materiales compositivos -- la melodía, la armonía, el ritmo, el timbre -- a partir de la ordenación serial de los diferentes parámetros musicales: alturas, intensidades, duraciones, ataques o instrumentos, entre otros. Es un desarrollo del serialismo dodecafónico de Schoenberg, que serializa solamente las alturas, hacia los demás parámetros sonoros. Tiene, por tanto, un alto grado de planificación pre-composicional: se pretende que la determinación compositiva sea absoluta; y se tiende al automatismo del arte y sus formas, alejándolo de cualquier evocación decimonónica.
+	El serialismo integral es un sistema de composición musical que predetermina los materiales compositivos -- la melodía, la armonía, el ritmo, el timbre -- a partir de la ordenación serial de los diferentes parámetros musicales: alturas, intensidades, duraciones, ataques o instrumentos, entre otros. 
+	
+	Es un desarrollo del serialismo dodecafónico de Schoenberg, que serializa solamente las alturas, hacia los demás parámetros sonoros. Tiene, por tanto, un alto grado de planificación pre-composicional: se pretende que la determinación compositiva sea absoluta; y se tiende al automatismo del arte y sus formas, alejándolo de cualquier evocación decimonónica.
 
-	Desde sus comienzos, el serialismo integral suscitó numerosas críticas, incluso desde el propio colectivo vanguardista. Una de ellas fue la falta de elección del intérprete a la hora de transmitir la obra. El intérprete serialista debe reproducir con total exactitud cada detalle de la partitura, y, por tanto, no puede aportar carácter alguno. Otra de las críticas más extendidas fue la incapacidad para interpretar estas obras correctamente debido a su complejidad técnica. Además, los detalles que precisamente las hacen complejas son, en su mayor parte, inapreciables por parte del oyente.
-
+	Desde sus comienzos, el serialismo integral suscitó numerosas críticas, incluso desde el propio colectivo vanguardista. Una de ellas fue la falta de elección del intérprete a la hora de transmitir la obra. El intérprete serialista debe reproducir con total exactitud cada detalle de la partitura, y, por tanto, no puede aportar carácter alguno. 
+	
+	Otra de las críticas más extendidas fue la incapacidad para interpretar estas obras correctamente debido a su complejidad técnica. Además, los detalles que precisamente las hacen complejas son, en su mayor parte, inapreciables por parte del oyente.
+	
+	\pagebreak
+	
 	\section{Pierre Boulez}
 	\label{boulez}
      \begin{wrapfigure}{L}{0.3\textwidth}
 		\captionsetup{justification=centering, font=footnotesize}
-		\vspace{-0.5cm}
+		\vspace*{-\bigskipamount}
 		\centering{
 			\includegraphics[width=0.22\textwidth]{Pierre_Boulez.jpg}			
 			\caption*{Pierre Boulez\\(1925--2016)}	}
@@ -55,7 +70,9 @@
     
     Boulez consideraba necesaria y evidente la extensión de elementos a predeterminar más allá de la melodía, y le parecía incoherente el sistema dodecafónico de Schoenberg, que para él estaba incompleto. En su controvertido ensayo \emph{Schoenberg ha muerto}, publicado un año después de la muerte del compositor, comentó:
     
-    \begin{quote}\emph{En primer lugar, la exploración del campo serial ha sido conducida unilateralmente: allí falta el plano rítmico, e incluso el plano sonoro propiamente dicho: las intensidades y los ataques.} [$\ldots$] \emph{Pero la causa esencial de su fracaso reside en el desconocimiento profundo de las FUNCIONES seriales propiamente dichas, las funciones engendradas por el principio mismo de la serie.}\footnote{Pierre Boulez, \emph{Schoenberg is dead}, en la revista \emph{The Score}, 1952.}\end{quote}
+    \begin{quote}\emph{En primer lugar, la exploración del campo serial ha sido conducida unilateralmente: allí falta el plano rítmico, e incluso el plano sonoro propiamente dicho: las intensidades y los ataques.} [$\ldots$] 
+    	
+    \emph{Pero la causa esencial de su fracaso reside en el desconocimiento profundo de las FUNCIONES seriales propiamente dichas, las funciones engendradas por el principio mismo de la serie.}\footnote{Pierre Boulez, \emph{Schoenberg is dead}, en la revista \emph{The Score}, 1952.}\end{quote}
     
    Es decir, que para ampliar el concepto de serialismo se debía primeramente conocer el fundamento matemático de las series y sus funciones transformativas. Además de ser músico y compositor, Boulez había estudiado matemáticas, lo que le llevó a querer analizar matemáticamente el sistema compositivo y generalizarlo para series de longitudes arbitrarias. Para él, el serialismo no debía ser un mero recurso compositivo, sino la ley que rige todos los elementos de la obra. De hecho, más adelante en su ensayo declara:
     
