--- a/Anexos/Matrices.tex
+++ b/Anexos/Matrices.tex
@@ -1,4 +1,4 @@
-	\chapter{Código para el cálculo de matrices dodecafónicas.}
+	\chapter{Código para calcular matrices dodecafónicas}
 	\label{app:matrices}
 		
 	\lstset{
