--- a/Anexos/Musette.tex
+++ b/Anexos/Musette.tex
@@ -1,3 +1,3 @@
-\chapter{Análisis serial de la Musette.}
+\chapter{Análisis serial de la Musette}
 	\label{app:score}
     \includepdf[pages=-]{Anexos/Musette.pdf}
