--- a/Portada.tex
+++ b/Portada.tex
@@ -1,9 +1,14 @@
-	\begin{center}
+\pagestyle{plain}
+\thispagestyle{empty}
 
+	\begin{center}
+			\vspace*{\bigskipamount}
             \includegraphics[width=\textwidth]{0.png}
             
-			\vspace{2cm} {\Huge LA ESTRUCTURA MATEMÁTICA\\DEL SERIALISMO MUSICAL\par}
+			\vfill
+			{\LARGE LA ESTRUCTURA MATEMÁTICA\\DEL SERIALISMO MUSICAL\par}
 		
-			\vspace{2cm} \LARGE{Celia Rubio Madrigal\par}
+			\bigskip\bigskip\bigskip
+			\large{Celia Rubio Madrigal\par}
             
 	\end{center}
