--- a/main.tex
+++ b/main.tex
@@ -1,43 +1,31 @@
-\documentclass[12pt,twoside]{book}
+\documentclass[twoside]{book}
 
 \input{Bibliotecas.tex}
 %\includeonly{02.Dodecafonismo, Portada, Introduccion, 08.Filosofia, 09.Escalas, 10.Musescore, Anexos, Bibliografia}
 
-\begin{document}
-	\small
-	\pagestyle{plain}
-	\thispagestyle{empty}
-	
+\begin{document}	
     \include{Portada}
-    
-	\pagenumbering{Roman}
     \include{Introduccion}
 	
 	\pagenumbering{arabic}
 	\pagestyle{fancy}
 	
-	\addtocounter{chapter}{-1}
-	
-	\include{00.Permutaciones}
+	%\addtocounter{chapter}{-1}	
+	%\include{00.Permutaciones}
 	
     \part{DODECAFONISMO}
-
-    \include{01.Historia}
+    %\include{01.Historia}
     \include{02.Dodecafonismo}
-	\include{03.Suite}
+	%\include{03.Suite}
 	\include{04.Grupo}
-
-	\newpage$\ $
-	\thispagestyle{empty}
-	\cleardoublepage
     
-	\part{ENEFONISMO}
-	\include{05.Serialismo}
-	\include{06.Acciones}
+	%\part{ENEFONISMO}
+	%\include{05.Serialismo}
+	%\include{06.Acciones}
     \include{07.Espectros}
     
     \part{MODIFICACIONES}
-	\include{08.Filosofia}
+	%\include{08.Filosofia}
 	\include{09.Escalas}
 	\include{10.Musescore}
     
