--- a/01.Historia.tex
+++ b/01.Historia.tex
@@ -2,7 +2,7 @@
 	\section{Richard Wagner y la emancipación de la disonancia}
 		\begin{wrapfigure}{r}{0.3\textwidth}
 			\captionsetup{justification=centering, font=footnotesize}
-			\vspace{-0.5cm}
+			\vspace{-\bigskipamount}
 			\centering{
 			\includegraphics[width=0.22\textwidth]{Richard_Wagner.jpg}			
 			\caption*{Richard Wagner\\(1813--1883)}	}
@@ -20,7 +20,6 @@
 		
 		\begin{wrapfigure}{L}{0.3\textwidth}
 			\captionsetup{justification=centering, font=footnotesize}
-			\vspace{-0.5cm}
 			\centering{
 				\includegraphics[width=0.22\textwidth]{Arnold_Schoenberg.jpg}			
 				\caption*{Arnold Schoenberg\\(1874--1951)}	}
