--- a/Anexos/Comm.tex
+++ b/Anexos/Comm.tex
@@ -1,42 +1,41 @@
 	\chapter[Conmutatividad del grupo D$_{\textbf{12}}$ x D$_{\textbf{12}}$]{Conmutatividad del grupo \\D$_{\textbf{12}}$ x D$_{\textbf{12}}$}
 	\label{app:commm}
-		\vspace{-1cm}\underline{S y T no conmutan:}
+		\subsubsection*{S y T no conmutan:}
 		
 		$\text{S}\circ\text{T}(\sigma(m))=\text{S}(\sigma(m)+1)=-(\sigma(m)+1)=-\sigma(m)-1$
 		
 		$\text{T}\circ\text{S}(\sigma(m))=\text{T}(-\sigma(m))=-\sigma(m)+1$
 		
-		$\text{S}\circ\text{T}^{-1}(\sigma(m))=\text{S}(\sigma(m)-1)=-(\sigma(m)-1)=-\sigma(m)+1=\text{T}\circ\text{S}(\sigma(m))$\\
+		$\text{S}\circ\text{T}^{-1}(\sigma(m))=\text{S}(\sigma(m)-1)=-(\sigma(m)-1)=-\sigma(m)+1=\text{T}\circ\text{S}(\sigma(m))$
 		
-		\underline{V y C no conmutan:}
+		\subsubsection*{V y C no conmutan:}
 		
 		$\text{V}\circ\text{C}(\sigma(m))=\text{V}(\sigma(m+1))=\sigma(-(m+1))=\sigma(-m-1)$
 		
 		$\text{C}\circ\text{V}(\sigma(m))=\text{C}(\sigma(-m))=\sigma(-m+1)$
 		
-		$\text{V}\circ\text{C}^{-1}(\sigma(m))=\text{V}(\sigma(m-1))=\sigma(-(m-1))=\sigma(-m+1)=\text{C}\circ\text{V}(\sigma(m))$\\
+		$\text{V}\circ\text{C}^{-1}(\sigma(m))=\text{V}(\sigma(m-1))=\sigma(-(m-1))=\sigma(-m+1)=\text{C}\circ\text{V}(\sigma(m))$
 		
-		\begin{multicols}{2}\underline{S y V conmutan:}
+		\subsubsection*{S y V conmutan:}
 		
 		$\text{S}\circ\text{V}(\sigma(m))=\text{S}(\sigma(-m))=-\sigma(-m)$
 		
-		$\text{V}\circ\text{S}(\sigma(m))=\text{V}(-\sigma(m))=-\sigma(-m)$\\
+		$\text{V}\circ\text{S}(\sigma(m))=\text{V}(-\sigma(m))=-\sigma(-m)$
 		
-		\underline{S y C conmutan:}
+		\subsubsection*{S y C conmutan:}
 		
 		$\text{S}\circ\text{C}(\sigma(m))=\text{S}(\sigma(m+1))=-\sigma(m+1)$
 		
 		$\text{C}\circ\text{S}(\sigma(m))=\text{C}(-\sigma(m))=-\sigma(m+1)$
 		
-		\underline{T y V conmutan:}
+		\subsubsection*{T y V conmutan:}
 		
 		$\text{T}\circ\text{V}(\sigma(m))=\text{T}(\sigma(-m))=\sigma(-m)+1$
 		
-		$\text{V}\circ\text{T}(\sigma(m))=\text{V}(\sigma(m)+1)=\sigma(-m)+1$\\
+		$\text{V}\circ\text{T}(\sigma(m))=\text{V}(\sigma(m)+1)=\sigma(-m)+1$
 		
-		\underline{T y C conmutan:}
+		\subsubsection*{T y C conmutan:}
 		
 		$\text{T}\circ\text{C}(\sigma(m))=\text{T}(\sigma(m+1))=\sigma(m+1)+1$
 		
 		$\text{C}\circ\text{T}(\sigma(m))=\text{C}(\sigma(m)+1)=\sigma(m+1)+1$
-		\end{multicols}
