--- a/Introduccion.tex
+++ b/Introduccion.tex
@@ -1,4 +1,7 @@
-\chapter*{}
+\pagestyle{plain}
+\thispagestyle{empty}
+
+	\vspace*{\bigskipamount}
 	\begin{flushright}
 		\textit{Dedicado a mis dos \\
 			grandes pasiones: \\
@@ -9,17 +12,17 @@
 		It has been observed that mathematics is the\\
 		most abstract of the sciences, music\\
 		the most abstract of the arts.\\
-		\vspace*{0.5cm}
+		\bigskip
 		 --- David Wright \cite{wright}
-		 \vspace*{2cm}
 	\end{flushright}
 	
-%	\chapter*{Agradecimientos}
+	\chapter*{Agradecimientos}
 	
-%		Me gustaría dar las gracias a 
+		Me gustaría dar las gracias a todos.
 	
+	
+	\pagenumbering{Roman}
 	\chapter*{INTRODUCCIÓN AL TEXTO}
-	
 		Todas las estructuras musicales están basadas en estructuras matemáticas. Los elementos musicales de los que están compuestas las obras, como las notas, las dinámicas o los timbres, están agrupados en conjuntos, y, como tales, cumplen ciertas propiedades al relacionarse consigo mismos o con otros conjuntos.
 		
 		A lo largo de la historia, los compositores han ido descubriendo e inventando estas propiedades musicales en las piezas que componían; por ejemplo, desde consonancias y disonancias entre notas, hasta la jerarquía según el pulso en el que la nota se encuentra. Las matemáticas son capaces de describir las propiedades de estos elementos musicales como para cualquier otro conjunto matemático.
@@ -27,9 +30,13 @@
 		Por ejemplo, las músicas serialistas se basan en la continua reiteración de secuencias de elementos musicales. Es decir, un compositor serialista tomará una secuencia ordenada de notas, dinámicas o timbres y la usará como único bloque constructivo de su obra. Puede, además, serializar más de un conjunto de elementos musicales, o incluso pretender serializar el máximo número de conjuntos -- lo que a mediados del siglo XX se llamaría serialismo integral. Estas músicas se pueden describir matemáticamente por medio de permutaciones y grupos.
 		
 		Son en estas estructuras en las que se centrará el presente texto, y más específicamente en el dodecafonismo, el primer sistema compositivo serialista. Se explicarán los fundamentos matemáticos que lo posibilitan, las razones históricas por las que surgió y los postulados que lo definieron, proponiendo ejemplos analizados. Además, se investigará sobre el valor artístico del serialismo mediante el uso de escalas no cromáticas en busca de consonancia.
+        % TODO
         
-        \renewcommand*\contentsname{\vspace{0cm}\begin{Huge}\textbf{Índice general}\end{Huge}\vspace{-1cm}}
-	\tableofcontents
+    
+    \renewcommand*\contentsname{\begin{LARGE}\textbf{Índice general}\end{LARGE}\vspace{-\bigskipamount}}
+	\begin{changemargin}{-0.5cm}{-0.5cm}
+		\tableofcontents
+	\end{changemargin}
 	\newpage
 	$\ $
 	\thispagestyle{empty}
